Update modelhandler_train and debug modelhandler.py

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,9 @@ output
 pv_vision.egg-info
 dist
 
-unet_oversample_low_final_model_for_paper
-model_weights.zip
+# tutorial
+tutorials/unet_oversample_low_final_model_for_paper
+tutorials/model_weights.zip
+tutorials/checkpoints
+tutorials/output
+
